# ChangeLog for dev-python/ply
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/ply/ChangeLog,v 1.4 2005/11/19 10:49:30 chriswhite Exp $

  19 Nov 2005; Chris White <chriswhite@gentoo.org> metadata.xml:
  Added japanese metadata.xml translation thanks to Yoshino-san.

  02 Sep 2004; Travis Tilley <lv@gentoo.org> ply-1.5.ebuild:
  added ~amd64 keyword

  28 Jun 2004; David Holm <dholm@gentoo.org> ply-1.5.ebuild:
  Added to ~ppc.

*ply-1.5 (27 Jun 2004)

  27 Jun 2004; Lukasz Strzygowski <lucass@gentoo.org> +ply-1.5.ebuild:
  Initial commit. Thanks to Yann Ramin in bug #49932.
