@@ -1,14 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 f374b8a958dbdcdbb5d807a0325f30d5 ChangeLog 650
+MD5 13ac08c12a45131e09e30c8659d5fe93 ChangeLog 878
+RMD160 58104b5781a5f8a02a87da29ec20c1fb0a1ffd8e ChangeLog 878
+SHA256 42a861ead287083c95a14684cb09a308b3339763bb1b01c8d4a66f95559410f8 ChangeLog 878
 MD5 c599af08601e51fff11b9fd1193f2086 files/digest-ply-1.5 58
-MD5 d559ecd1c8ad63739a8f7453f7220e2b metadata.xml 1273
-MD5 1910b615f22432d8643a20c068a44f03 ply-1.5.ebuild 574
+RMD160 1637cc85c51cef8d4b9403e5eb3a660a02d2b1aa files/digest-ply-1.5 58
+SHA256 3bbe8a9d2a6f3f55e840b62fa3d32c1e83045fc81d620110aaea658470ef5f53 files/digest-ply-1.5 58
+MD5 654e5c7cdf9c559022177bcedaad8b43 files/digest-ply-1.6 220
+RMD160 baa9dd43025dbdc023690229dbe2e6d4e386c68c files/digest-ply-1.6 220
+SHA256 e2c376285b5d2a5790646315fd195bc48d031af12405c45667b6198c9381afad files/digest-ply-1.6 220
+MD5 c909d39e279f63fa41ab1bfd554e515a metadata.xml 1268
+RMD160 6dae5e17fe921dd670f936c3016aedc77bbf9227 metadata.xml 1268
+SHA256 552871264db95b1396b369f4b152d1d467c6885804462efb9e53bd0a8a7426a2 metadata.xml 1268
+MD5 92ee397eadb12152d6117b6922058fc0 ply-1.5.ebuild 560
+RMD160 4b99eaab150b3b161d6fad1da8ac46efb1b14a1a ply-1.5.ebuild 560
+SHA256 7a8f10beb495d468fe0cab669465461e01602a86c5c00dbc43348b608fe99f88 ply-1.5.ebuild 560
+MD5 d83ec6174e31d26c3617b3a8ee62f68a ply-1.6.ebuild 560
+RMD160 748bf4f1edcb091a2d4eb0a4d5251d250f97a68b ply-1.6.ebuild 560
+SHA256 3dd487fb56313e91ed2c2880db8b92bb211d30a0fa734d403896faa105ae93df ply-1.6.ebuild 560
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2 (GNU/Linux)
+Version: GnuPG v1.4.2.2 (GNU/Linux)
 
-iD8DBQFDfwNPFdQwWVoAgN4RAnzLAKDOMbf8riFnEyJZZKk7gIhavAoVwACfVwjM
-zS+zx0TXlz+cPR5ud5c/j3E=
-=vc6t
+iD8DBQFEGdm22jLqHNfbg2URAnn8AJ0c4Ik6iBOjFiixVMiJZLJ8sSf1HACgkety
+vUMp0seZLZ16VIVhr+gLLLQ=
+=9Sjo
 -----END PGP SIGNATURE-----
