@@ -1,0 +1,3 @@
+MD5 cc43cab69b072fdd5c2557f3865c383d ply-1.6.tar.gz 72605
+RMD160 ef58dd75c57305318c759e6faaf28c170b9612e4 ply-1.6.tar.gz 72605
+SHA256 8f485f7dce9b0952f8169cb00dafaee73bb3e6977600bb08bd2cad4c69e697d3 ply-1.6.tar.gz 72605
