@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/ply/Attic/ply-1.5.ebuild,v 1.5 2006/03/16 21:33:22 lucass Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/ply/Attic/ply-1.6.ebuild,v 1.1 2006/03/16 21:33:22 lucass Exp $
 
 inherit distutils
 
