@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/ply
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/ply/ChangeLog,v 1.4 2005/11/19 10:49:30 chriswhite Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/ply/ChangeLog,v 1.5 2006/03/16 21:33:22 lucass Exp $
+
+*ply-1.6 (16 Mar 2006)
+
+  16 Mar 2006; Lukasz Strzygowski <lucass@gentoo.org> metadata.xml,
+  ply-1.5.ebuild, +ply-1.6.ebuild:
+  Version bump, fixed SRC_URI and HOMEPAGE (bug #109585). Removed trailing
+  whitespaces from metadata.
 
   19 Nov 2005; Chris White <chriswhite@gentoo.org> metadata.xml:
   Added japanese metadata.xml translation thanks to Yoshino-san.
